Mon Dec  6 06:53:43 2004  Chad Elliott  <elliott_c@ociweb.com>

        * apps/soreduce/SO_Group.cpp:

          Increase the number of libraries that soreduce can handle.

Mon Dec 06 11:34:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          Added ACE_LACKS_SIGSET_DEFINITIONS

Mon Dec 06 10:49:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          Undef ACE_LACKS_SIGSET, MinGW has sigset but this define is set
          from config-win32-common.h

Mon Dec 06 10:06:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-interix.h:
          Fixed fuzz errors

Mon Dec 06 09:29:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_signal.h:
          Added patch for Interix and removed not needed MinGW check

        * ace/Sock_Connect.cpp:
        * ace/SOCK_Dgram.cpp:
        * ace/SOCK_Dgram_Bcast.cpp:
        * ace/SOCK_Dgram_Mcast.cpp:
          Applied patches for the Interix port. Thanks to
          Steven Frare <stevefr at avaya dot com> for the patches.

Mon Dec 06 09:06:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-interix.h:
        * include/makeinclude/platform_win32_interix.GNU:
          New files for Interix (Microsoft Services for Unix). Thanks to
          Steven Frare <stevefr at avaya dot com> for these new files

Sun Dec 05 16:44:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ace/Select_Reactor_T.cpp (dispatch_notification_handlers):

          Decrement the number_of_active_handles after a successful
          dispatch. This seems to cause Reactor_Notify_Test to fail on
          Win32. The reason why this does not show up in *nix is left as
          an exercise to the reader! Thanks to Steve Huston for alerting
          us about this issue.

Sat Dec  4 20:39:20 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
