@@ -1,4 +1,6 @@
 // $Id$
+#include "ace/config-lite.h"
+#if defined (ACE_HAS_THREADS)
 
 #include "ace/OS_main.h"
 #include "ace/OS_Memory.h"
@@ -79,3 +81,15 @@ int ACE_TMAIN (int, ACE_TCHAR *[])
   rep.update_device (42);
   return 0;
 }
+
+#else
+#include "ace/OS_main.h"
+#include "ace/OS_NS_stdio.h"
+
+int ACE_TMAIN (int, ACE_TCHAR *[])
+{
+  ACE_OS::puts (ACE_TEXT ("This example requires threads."));
+  return 0;
+}
+
+#endif /* ACE_HAS_THREADS */
